parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DO
    BLOC

Grammar

Rule 0     S' -> bloc
Rule 1     bloc -> bloc statement
Rule 2     bloc -> statement
Rule 3     statement -> IF expression LBRACKET bloc RBRACKET
Rule 4     statement -> IF expression LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
Rule 5     body -> LBRACKET bloc RBRACKET
Rule 6     statement -> WHILE expression body
Rule 7     statement -> FOR NAME EQUAL expression SEMICOLON expression SEMICOLON expression body
Rule 8     statement -> NAME EQUAL expression SEMICOLON
Rule 9     statement -> expression SEMICOLON
Rule 10    expression -> expression EQUALITY expression
Rule 11    expression -> expression NON_EQUALITY expression
Rule 12    expression -> expression LESSTHAN expression
Rule 13    expression -> expression GREATERTHAN expression
Rule 14    expression -> expression LESSTHAN_AND_EQUALITY expression
Rule 15    expression -> expression GREATERTHAN_AND_EQUALITY expression
Rule 16    expression -> expression PLUS expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression DIVIDE expression
Rule 20    expression -> expression MODULO expression
Rule 21    expression -> MINUS expression
Rule 22    expression -> LPAREN expression RPAREN
Rule 23    expression -> NUMBER
Rule 24    expression -> NAME

Terminals, with rules where they appear

BLOC                 : 
DIVIDE               : 19
DO                   : 
ELSE                 : 4
EQUAL                : 7 8
EQUALITY             : 10
FOR                  : 7
GREATERTHAN          : 13
GREATERTHAN_AND_EQUALITY : 15
IF                   : 3 4
LBRACKET             : 3 4 4 5
LESSTHAN             : 12
LESSTHAN_AND_EQUALITY : 14
LPAREN               : 22
MINUS                : 17 21
MODULO               : 20
NAME                 : 7 8 24
NON_EQUALITY         : 11
NUMBER               : 23
PLUS                 : 16
RBRACKET             : 3 4 4 5
RPAREN               : 22
SEMICOLON            : 7 7 8 9
TIMES                : 18
WHILE                : 6
error                : 

Nonterminals, with rules where they appear

bloc                 : 1 3 4 4 5 0
body                 : 6 7
expression           : 3 4 6 7 7 7 8 9 10 10 11 11 12 12 13 13 14 14 15 15 16 16 17 17 18 18 19 19 20 20 21 22
statement            : 1 2

Parsing method: LALR

state 0

    (0) S' -> . bloc
    (1) bloc -> . bloc statement
    (2) bloc -> . statement
    (3) statement -> . IF expression LBRACKET bloc RBRACKET
    (4) statement -> . IF expression LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (6) statement -> . WHILE expression body
    (7) statement -> . FOR NAME EQUAL expression SEMICOLON expression SEMICOLON expression body
    (8) statement -> . NAME EQUAL expression SEMICOLON
    (9) statement -> . expression SEMICOLON
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    IF              shift and go to state 6
    WHILE           shift and go to state 2
    FOR             shift and go to state 4
    NAME            shift and go to state 1
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7

    bloc                           shift and go to state 5
    expression                     shift and go to state 3
    statement                      shift and go to state 9

state 1

    (8) statement -> NAME . EQUAL expression SEMICOLON
    (24) expression -> NAME .

    EQUAL           shift and go to state 11
    SEMICOLON       reduce using rule 24 (expression -> NAME .)
    EQUALITY        reduce using rule 24 (expression -> NAME .)
    NON_EQUALITY    reduce using rule 24 (expression -> NAME .)
    LESSTHAN        reduce using rule 24 (expression -> NAME .)
    GREATERTHAN     reduce using rule 24 (expression -> NAME .)
    LESSTHAN_AND_EQUALITY reduce using rule 24 (expression -> NAME .)
    GREATERTHAN_AND_EQUALITY reduce using rule 24 (expression -> NAME .)
    PLUS            reduce using rule 24 (expression -> NAME .)
    MINUS           reduce using rule 24 (expression -> NAME .)
    TIMES           reduce using rule 24 (expression -> NAME .)
    DIVIDE          reduce using rule 24 (expression -> NAME .)
    MODULO          reduce using rule 24 (expression -> NAME .)


state 2

    (6) statement -> WHILE . expression body
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 13

state 3

    (9) statement -> expression . SEMICOLON
    (10) expression -> expression . EQUALITY expression
    (11) expression -> expression . NON_EQUALITY expression
    (12) expression -> expression . LESSTHAN expression
    (13) expression -> expression . GREATERTHAN expression
    (14) expression -> expression . LESSTHAN_AND_EQUALITY expression
    (15) expression -> expression . GREATERTHAN_AND_EQUALITY expression
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (20) expression -> expression . MODULO expression

    SEMICOLON       shift and go to state 24
    EQUALITY        shift and go to state 22
    NON_EQUALITY    shift and go to state 16
    LESSTHAN        shift and go to state 14
    GREATERTHAN     shift and go to state 25
    LESSTHAN_AND_EQUALITY shift and go to state 19
    GREATERTHAN_AND_EQUALITY shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 21
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 20
    MODULO          shift and go to state 23


state 4

    (7) statement -> FOR . NAME EQUAL expression SEMICOLON expression SEMICOLON expression body

    NAME            shift and go to state 26


state 5

    (0) S' -> bloc .
    (1) bloc -> bloc . statement
    (3) statement -> . IF expression LBRACKET bloc RBRACKET
    (4) statement -> . IF expression LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (6) statement -> . WHILE expression body
    (7) statement -> . FOR NAME EQUAL expression SEMICOLON expression SEMICOLON expression body
    (8) statement -> . NAME EQUAL expression SEMICOLON
    (9) statement -> . expression SEMICOLON
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    IF              shift and go to state 6
    WHILE           shift and go to state 2
    FOR             shift and go to state 4
    NAME            shift and go to state 1
    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7

    expression                     shift and go to state 3
    statement                      shift and go to state 27

state 6

    (3) statement -> IF . expression LBRACKET bloc RBRACKET
    (4) statement -> IF . expression LBRACKET bloc RBRACKET ELSE LBRACKET bloc RBRACKET
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 28

state 7

    (23) expression -> NUMBER .

    EQUALITY        reduce using rule 23 (expression -> NUMBER .)
    NON_EQUALITY    reduce using rule 23 (expression -> NUMBER .)
    LESSTHAN        reduce using rule 23 (expression -> NUMBER .)
    GREATERTHAN     reduce using rule 23 (expression -> NUMBER .)
    LESSTHAN_AND_EQUALITY reduce using rule 23 (expression -> NUMBER .)
    GREATERTHAN_AND_EQUALITY reduce using rule 23 (expression -> NUMBER .)
    PLUS            reduce using rule 23 (expression -> NUMBER .)
    MINUS           reduce using rule 23 (expression -> NUMBER .)
    TIMES           reduce using rule 23 (expression -> NUMBER .)
    DIVIDE          reduce using rule 23 (expression -> NUMBER .)
    MODULO          reduce using rule 23 (expression -> NUMBER .)
    LBRACKET        reduce using rule 23 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 23 (expression -> NUMBER .)
    RPAREN          reduce using rule 23 (expression -> NUMBER .)


state 8

    (22) expression -> LPAREN . expression RPAREN
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 29

state 9

    (2) bloc -> statement .

    RBRACKET        reduce using rule 2 (bloc -> statement .)
    IF              reduce using rule 2 (bloc -> statement .)
    WHILE           reduce using rule 2 (bloc -> statement .)
    FOR             reduce using rule 2 (bloc -> statement .)
    NAME            reduce using rule 2 (bloc -> statement .)
    MINUS           reduce using rule 2 (bloc -> statement .)
    LPAREN          reduce using rule 2 (bloc -> statement .)
    NUMBER          reduce using rule 2 (bloc -> statement .)
    $end            reduce using rule 2 (bloc -> statement .)


state 10

    (21) expression -> MINUS . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 30

state 11

    (8) statement -> NAME EQUAL . expression SEMICOLON
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 31

state 12

    (24) expression -> NAME .

    EQUALITY        reduce using rule 24 (expression -> NAME .)
    NON_EQUALITY    reduce using rule 24 (expression -> NAME .)
    LESSTHAN        reduce using rule 24 (expression -> NAME .)
    GREATERTHAN     reduce using rule 24 (expression -> NAME .)
    LESSTHAN_AND_EQUALITY reduce using rule 24 (expression -> NAME .)
    GREATERTHAN_AND_EQUALITY reduce using rule 24 (expression -> NAME .)
    PLUS            reduce using rule 24 (expression -> NAME .)
    MINUS           reduce using rule 24 (expression -> NAME .)
    TIMES           reduce using rule 24 (expression -> NAME .)
    DIVIDE          reduce using rule 24 (expression -> NAME .)
    MODULO          reduce using rule 24 (expression -> NAME .)
    LBRACKET        reduce using rule 24 (expression -> NAME .)
    SEMICOLON       reduce using rule 24 (expression -> NAME .)
    RPAREN          reduce using rule 24 (expression -> NAME .)


state 13

    (6) statement -> WHILE expression . body
    (10) expression -> expression . EQUALITY expression
    (11) expression -> expression . NON_EQUALITY expression
    (12) expression -> expression . LESSTHAN expression
    (13) expression -> expression . GREATERTHAN expression
    (14) expression -> expression . LESSTHAN_AND_EQUALITY expression
    (15) expression -> expression . GREATERTHAN_AND_EQUALITY expression
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (20) expression -> expression . MODULO expression
    (5) body -> . LBRACKET bloc RBRACKET

    EQUALITY        shift and go to state 22
    NON_EQUALITY    shift and go to state 16
    LESSTHAN        shift and go to state 14
    GREATERTHAN     shift and go to state 25
    LESSTHAN_AND_EQUALITY shift and go to state 19
    GREATERTHAN_AND_EQUALITY shift and go to state 17
    PLUS            shift and go to state 18
    MINUS           shift and go to state 21
    TIMES           shift and go to state 15
    DIVIDE          shift and go to state 20
    MODULO          shift and go to state 23
    LBRACKET        shift and go to state 32

    body                           shift and go to state 33

state 14

    (12) expression -> expression LESSTHAN . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 34

state 15

    (18) expression -> expression TIMES . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 35

state 16

    (11) expression -> expression NON_EQUALITY . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 36

state 17

    (15) expression -> expression GREATERTHAN_AND_EQUALITY . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 37

state 18

    (16) expression -> expression PLUS . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 38

state 19

    (14) expression -> expression LESSTHAN_AND_EQUALITY . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 39

state 20

    (19) expression -> expression DIVIDE . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 40

state 21

    (17) expression -> expression MINUS . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 41

state 22

    (10) expression -> expression EQUALITY . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 42

state 23

    (20) expression -> expression MODULO . expression
    (10) expression -> . expression EQUALITY expression
    (11) expression -> . expression NON_EQUALITY expression
    (12) expression -> . expression LESSTHAN expression
    (13) expression -> . expression GREATERTHAN expression
    (14) expression -> . expression LESSTHAN_AND_EQUALITY expression
    (15) expression -> . expression GREATERTHAN_AND_EQUALITY expression
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . expression MODULO expression
    (21) expression -> . MINUS expression
    (22) expression -> . LPAREN expression RPAREN
    (23) expression -> . NUMBER
    (24) expression -> . NAME

    MINUS           shift and go to state 10
    LPAREN          shift and go to state 8
    NUMBER          shift and go to state 7
    NAME            shift and go to state 12

    expression                     shift and go to state 43

state 24

    (9) statement -> expression SEMICOLON .

    RBRACKET        reduce using rule 9 (statement -> expression SEMICOLON .)
    IF              reduce using rule 9 (statement -> expression SEMICOLON .)
    WHILE           reduce using rule 9 (statement -> expression SEMICOLON .)
    FOR             reduce using rule 9 (statement -> expression SEMICOLON .)
    NAME            reduce using rule 9 (statement -> expression SEMICOLON .)
    MINUS           reduce using rule 9 (statement -> expression SEMICOLON .)
    LPAREN          reduce using rule 9 (statement -> expression SEMICOLON .)
    NUMBER          reduce using rule 9 (statement -> expression SEMICOLON .)
    $end            reduce using rule 9 (statement -> expression SEMICOLON .)


state 25
